# ABC-SBI

./: .gitignore  README.md  TODO.txt  cluster_gauss_sort.py  cluster_linear.py  cluster_logistic.py  cluster_potus_full.py  cluster_potus_nat.py  coding_notes.txt  new_read_pickle_gauss.ipynb  prompt.txt  requirements-min.txt  requirements_antoine.txt  requirements_ryan.txt  run.sbatch  simple_todo_abcnre.md  simulation.py  slurm-39631.out  test_SBC_ABC copy.ipynb  test_SBC_ABC.ipynb  test_logistic.ipynb  tree.txt
abcnre/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  check_installation.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_timing_logs.py  tree.txt  tree_clean.txt  ultimate_fix.py
abcnre/.github/workflows/: ci.yml
abcnre/cli/: compute_metrics.py  create_estimator.py  create_simulator.py  create_simulator_and_estimator.py  interactive.py  main.py  main_new.py  plot_posterior_comparison.py  run_sbc.py
abcnre/cli/templates/classifier_configs/: mlp_fast.yaml
abcnre/examples/cli_gauss/: inference.sh  mcmc.sh  postprocessing.ipynb  simulate_data.sh
abcnre/examples/cli_gauss/configs/: classif_config.yaml  model_config.yaml  regressor_config.yaml
abcnre/examples/cli_gauss/results/: estimator.yaml  estimator_simulator.yaml
abcnre/examples/cli_gauss_old/: cli.sh
abcnre/examples/cli_gauss_old/results/: combined_report.txt  estimator_classif_config.yaml  estimator_report.txt  estimator_simulator_model.yml
abcnre/examples/cli_gk/: inference.sh  mcmc.sh  postprocessing.ipynb
abcnre/examples/cli_gk/configs/: classif_config.yaml  model_config.yaml  regressor_config.yaml
abcnre/examples/gauss_2D/: test_2d_marginal_setup.py
abcnre/examples/notebooks/: gauss_gauss-load.ipynb  gauss_gauss-train.ipynb  gauss_gauss.ipynb
abcnre/examples/scripts/: basic_workflow.py  run_gauss_1D.py
abcnre/src/abcnre/: SBC.py  __init__.py  _version.py  metrics.py  nre_cluster.py  plots.py  simulation.py  test_run_mcmc.py  training.py
abcnre/src/abcnre.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
abcnre/tests/: conftest.py  test_sampling.py
(+2946 files in other folders)
